Added link to mp1

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <p>Hi, I'm Alec. I write code and play games, and try to get out when I can.</p>
         <p>The plan is to make cool stuff and put it up here whenever possible. Maybe I'll add an about page with some
         info about me some day, but don't hold your breath.</p>
+        <p>So far there's only one thing to see, and it's <a href="CS418/MP1">right here</a>. WebGL is pretty neat, and 418 is
+        the graphics class I'm in, so expect more of that sort of stuff.</p>
       </section>
     </div>
 
