Almost added face pic

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         info about me some day, but don't hold your breath.</p>
         <p>So far there's only one thing to see, and it's <a href="CS418/MP1">right here</a>. WebGL is pretty neat, and 418 is
         the graphics class I'm in, so expect more of that sort of stuff.</p>
+        <p>I'd really like to at least fill the page for now, but I really don't have any more to add. I figure a picture of me
+        should take up some space right?
       </section>
     </div>
 
