--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <p>So far there's only one thing to see, and it's <a href="CS418/MP1">right here</a>. WebGL is pretty neat, and 418 is
         the graphics class I'm in, so expect more of that sort of stuff.</p>
         <p>I'd really like to at least fill the page for now, but I really don't have any more to add. I figure a picture of me
-        should take up some space right?
+        should take up some space right?</p>
+        <img src="images/my_face.jpg" alt="You're missing out on true beauty" style="width:500px;height:500px">
       </section>
     </div>
 
