--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         the graphics class I'm in, so expect more of that sort of stuff.</p>
         <p>I'd really like to at least fill the page for now, but I really don't have any more to add. I figure a picture of me
         should take up some space right?</p>
-        <img src="images/my_face.jpg" alt="You're missing out on true beauty" style="width:500px;height:500px">
+        <img src="images/my_face.jpg" alt="You're missing out on true beauty" style="width:433px;height:400px">
+        <p>Muuch better.</p>
       </section>
     </div>
 
